# JantungIn

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  c.c  makefile  notebook (4).ipynb  notepad.txt
Inference/: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
JantungIn-FE/: .env  .env.example  .gitignore  LAZY_LOADING.md  MVVM.md  PWA.md  README.md  index.html  package-lock.json  package.json  vite.config.js
JantungIn_API/: .env.example  .gitignore  ADMIN_SETUP.md  ADMIN_TESTING.md  Dockerfile  PROJECT_STATUS.md  RAILWAY_DEPLOYMENT.md  README-NIK-FIX.md  README-SECURITY.md  README.md  TESTING.md  admin-login-response.json  admin-terminal.js  create-admin.js  create-simple-test-user.js  create-test-users.js  docker-compose.yml  heroku.yml  inspect-database.js  jantungin.pem  migrate-nik.js  package-lock.json  package.json  register-test-user.js  test-all-endpoints.js  test-api.js  test-db-connection.js  test-diagnosis-payload.json  test-encryption.js  test-endpoint.js  test-in-memory.js  test-nik-encryption.js  testConnection.js
JantungIn_API_Legacy/: .env.example  .eslintrc.json  Dockerfile  README.md  docker-compose.yml  package-lock.json
JantungIn_Go_Latest/: .env.example  .gitignore  Dockerfile  compose.yaml  go.mod  go.sum  main.go
JantungIn_ML/: .env.example  README.md  main.py  pyproject.toml
JantungIn_ML/app/model/: predictor.py
JantungIn_ML/app/routes/: prediction.py
JantungIn_ML/app/schemas/: prediction.py
JantungIn_ML/notebook/: Notebook_JantungIn.ipynb
(+204 files in other folders)
